# MLIR-Simple

./: README.md  ast.sim  conv.sim
Ch12/: CMakeLists.txt  toyc.cpp
Ch12/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h
Ch12/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp
Ch12/parser/: AST.cpp
